# elips_bn_bls12

./: .gitignore  COPYING  COPYING.LESSER  COPYRIGHT  Doxyfile_101  Makefile  Makefile.am  README.md  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
docs/: _commont__headers_8h.html  _commont__headers_8h__dep__incl.map  _commont__headers_8h__dep__incl.md5  _commont__headers_8h__incl.map  _commont__headers_8h__incl.md5  _commont__headers_8h_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  bls12___g3__exp_8c_source.html  bls12___g3__exp_8h.html  bls12___g3__exp_8h.js  bls12___g3__exp_8h__dep__incl.map  bls12___g3__exp_8h__dep__incl.md5  bls12___g3__exp_8h__incl.map  bls12___g3__exp_8h__incl.md5  bls12___g3__exp_8h_a04349573c89d398f04506a6db9e2c487_cgraph.map  bls12___g3__exp_8h_a04349573c89d398f04506a6db9e2c487_cgraph.md5  bls12___g3__exp_8h_a04349573c89d398f04506a6db9e2c487_icgraph.map  bls12___g3__exp_8h_a04349573c89d398f04506a6db9e2c487_icgraph.md5  bls12___g3__exp_8h_a62ad2674d4d8c8ed394f5df155ad5b94_icgraph.map  bls12___g3__exp_8h_a62ad2674d4d8c8ed394f5df155ad5b94_icgraph.md5  bls12___g3__exp_8h_a9664a6d82c05d087c7e9cf80b657311d_cgraph.map  bls12___g3__exp_8h_a9664a6d82c05d087c7e9cf80b657311d_cgraph.md5  bls12___g3__exp_8h_a9664a6d82c05d087c7e9cf80b657311d_icgraph.map  bls12___g3__exp_8h_a9664a6d82c05d087c7e9cf80b657311d_icgraph.md5  bls12___g3__exp_8h_source.html  bls12__finalexp_8c_source.html  bls12__finalexp_8h.html  bls12__finalexp_8h.js  bls12__finalexp_8h__dep__incl.map  bls12__finalexp_8h__dep__incl.md5  bls12__finalexp_8h__incl.map  bls12__finalexp_8h__incl.md5  bls12__finalexp_8h_a7ebeae6dd8ceff07d604ddb47a9cd2a1_cgraph.map  bls12__finalexp_8h_a7ebeae6dd8ceff07d604ddb47a9cd2a1_cgraph.md5  bls12__finalexp_8h_a7ebeae6dd8ceff07d604ddb47a9cd2a1_icgraph.map  bls12__finalexp_8h_a7ebeae6dd8ceff07d604ddb47a9cd2a1_icgraph.md5  bls12__finalexp_8h_a82823a1827b2e4ee6fca04f570708e8f_cgraph.map  bls12__finalexp_8h_a82823a1827b2e4ee6fca04f570708e8f_cgraph.md5  (+802 more)
docs/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  (+3 more)
fontconfig/: 84c0f976e30e948e99073af70f4ae876-x86-64.cache-3  b0a71e6bf6a8a1a908413a823d76e21f-x86-64.cache-3  ef8951649ecb4e89c7d1ab953911a6bc-x86-64.cache-3
include/ELiPS_bn_bls/: Commont_headers.h  bls12_G3_exp.h  bls12_finalexp.h  bls12_frobenius.h  bls12_generate_points.h  bls12_inits.h  bls12_line_ate.h  bls12_line_tate.h  bls12_miller_ate.h  bls12_miller_optate.h  bls12_miller_tate.h  bls12_p8sparse.h  bls12_pairings.h  bls12_scm.h  bls12_skew_frobenius.h  bls12_test_pairings.h  bls12_timeprint.h  bls12_twist.h  bn_bls12_precoms.h  bn_clears.h  bn_efp.h  bn_efp12.h  bn_efp2.h  bn_efp6.h  bn_final_exp.h  bn_fp.h  bn_fp12.h  bn_fp2.h  bn_fp6.h  bn_frobenius.h  bn_generate_points.h  bn_inits.h  bn_line_ate.h  bn_line_tate.h  bn_miller_ate.h  bn_miller_optate.h  bn_miller_tate.h  bn_miller_xate.h  bn_p8sparse.h  bn_pairing_test.h  (+10 more)
src/: Makefile  Makefile.am  bls12_G3_exp.c  bls12_G3_exp.lo  bls12_finalexp.c  bls12_finalexp.lo  bls12_frobenius.c  bls12_frobenius.lo  bls12_generate_points.c  bls12_generate_points.lo  bls12_inits.c  bls12_inits.lo  bls12_line_ate.c  bls12_line_ate.lo  bls12_line_tate.c  bls12_line_tate.lo  bls12_miller_ate.c  bls12_miller_ate.lo  bls12_miller_optate.c  bls12_miller_optate.lo  bls12_miller_tate.c  bls12_miller_tate.lo  bls12_p8sparse.c  bls12_p8sparse.lo  bls12_pairings.c  bls12_pairings.lo  bls12_scm.c  bls12_scm.lo  bls12_skew_frobenius.c  bls12_skew_frobenius.lo  bls12_test_pairings.c  bls12_test_pairings.lo  bls12_timeprint.c  bls12_timeprint.lo  bls12_twist.c  bls12_twist.lo  bn_bls12_precoms.c  bn_bls12_precoms.lo  bn_clears.c  bn_clears.lo  (+57 more)
src/.deps/: bls12_G3_exp.Plo  bls12_finalexp.Plo  bls12_frobenius.Plo  bls12_generate_points.Plo  bls12_inits.Plo  bls12_line_ate.Plo  bls12_line_tate.Plo  bls12_miller_ate.Plo  bls12_miller_optate.Plo  bls12_miller_tate.Plo  bls12_p8sparse.Plo  bls12_pairings.Plo  bls12_scm.Plo  bls12_skew_frobenius.Plo  bls12_test_pairings.Plo  bls12_timeprint.Plo  bls12_twist.Plo  bn_bls12_precoms.Plo  bn_clears.Plo  bn_efp.Plo  bn_efp12.Plo  bn_efp2.Plo  bn_efp6.Plo  bn_final_exp.Plo  bn_fp.Plo  bn_fp12.Plo  bn_fp2.Plo  bn_fp6.Plo  bn_frobenius.Plo  bn_generate_points.Plo  bn_inits.Plo  bn_line_ate.Plo  bn_line_tate.Plo  bn_miller_ate.Plo  bn_miller_optate.Plo  bn_miller_tate.Plo  bn_miller_xate.Plo  bn_p8sparse.Plo  bn_pairing_test.Plo  bn_pairings.Plo  (+7 more)
src/.libs/: libelipsbnbls12.0.dylib  libelipsbnbls12.dylib  libelipsbnbls12.la  libelipsbnbls12.lai
src/.libs/libelipsbnbls12.0.dylib.dSYM/Contents/: Info.plist
src/.libs/libelipsbnbls12.0.dylib.dSYM/Contents/Resources/DWARF/: libelipsbnbls12.0.dylib
test/: main.c  test
