
SUBDIRS = src

AM_CPPFLAGS = -I../include

library_includedir = $(includedir)/ELiPS_bn_bls
library_include_HEADERS = include/ELiPS_bn_bls/Commont_headers.h\
include/ELiPS_bn_bls/bls12_G3_exp.h\
include/ELiPS_bn_bls/bls12_finalexp.h\
include/ELiPS_bn_bls/bls12_frobenius.h\
include/ELiPS_bn_bls/bls12_generate_points.h\
include/ELiPS_bn_bls/bls12_inits.h\
include/ELiPS_bn_bls/bls12_line_ate.h\
include/ELiPS_bn_bls/bls12_line_tate.h\
include/ELiPS_bn_bls/bls12_miller_ate.h\
include/ELiPS_bn_bls/bls12_miller_optate.h\
include/ELiPS_bn_bls/bls12_miller_tate.h\
include/ELiPS_bn_bls/bls12_p8sparse.h\
include/ELiPS_bn_bls/bls12_pairings.h\
include/ELiPS_bn_bls/bls12_scm.h\
include/ELiPS_bn_bls/bls12_skew_frobenius.h\
include/ELiPS_bn_bls/bls12_test_pairings.h\
include/ELiPS_bn_bls/bls12_timeprint.h\
include/ELiPS_bn_bls/bls12_twist.h\
include/ELiPS_bn_bls/bn_bls12_precoms.h\
include/ELiPS_bn_bls/bn_clears.h\
include/ELiPS_bn_bls/bn_efp.h\
include/ELiPS_bn_bls/bn_efp12.h\
include/ELiPS_bn_bls/bn_efp2.h\
include/ELiPS_bn_bls/bn_efp6.h\
include/ELiPS_bn_bls/bn_final_exp.h\
include/ELiPS_bn_bls/bn_fp.h\
include/ELiPS_bn_bls/bn_fp12.h\
include/ELiPS_bn_bls/bn_fp2.h\
include/ELiPS_bn_bls/bn_fp6.h\
include/ELiPS_bn_bls/bn_frobenius.h\
include/ELiPS_bn_bls/bn_generate_points.h\
include/ELiPS_bn_bls/bn_inits.h\
include/ELiPS_bn_bls/bn_line_ate.h\
include/ELiPS_bn_bls/bn_line_tate.h\
include/ELiPS_bn_bls/bn_miller_ate.h\
include/ELiPS_bn_bls/bn_miller_optate.h\
include/ELiPS_bn_bls/bn_miller_tate.h\
include/ELiPS_bn_bls/bn_miller_xate.h\
include/ELiPS_bn_bls/bn_p8sparse.h\
include/ELiPS_bn_bls/bn_pairing_test.h\
include/ELiPS_bn_bls/bn_pairings.h\
include/ELiPS_bn_bls/bn_prints.h\
include/ELiPS_bn_bls/bn_skew_frobenius.h\
include/ELiPS_bn_bls/bn_twist.h\
include/ELiPS_bn_bls/bn_utils.h\
include/ELiPS_bn_bls/curve_dtypes.h\
include/ELiPS_bn_bls/curve_settings.h\
include/ELiPS_bn_bls/field_dtype.h\
include/ELiPS_bn_bls/fp4.h\
include/ELiPS_bn_bls/fp8.h