
lib_LTLIBRARIES = libelipsbnbls12.la

AM_CPPFLAGS = -I../include

libelipsbnbls12_la_SOURCES = bls12_G3_exp.c\
bls12_finalexp.c\
bls12_frobenius.c\
bls12_generate_points.c\
bls12_inits.c\
bls12_line_ate.c\
bls12_line_tate.c\
bls12_miller_ate.c\
bls12_miller_optate.c\
bls12_miller_tate.c\
bls12_p8sparse.c\
bls12_pairings.c\
bls12_scm.c\
bls12_skew_frobenius.c\
bls12_test_pairings.c\
bls12_timeprint.c\
bls12_twist.c\
bn_bls12_precoms.c\
bn_clears.c\
bn_efp.c\
bn_efp12.c\
bn_efp2.c\
bn_efp6.c\
bn_final_exp.c\
bn_fp.c\
bn_fp12.c\
bn_fp2.c\
bn_fp6.c\
bn_frobenius.c\
bn_generate_points.c\
bn_inits.c\
bn_line_ate.c\
bn_line_tate.c\
bn_miller_ate.c\
bn_miller_optate.c\
bn_miller_tate.c\
bn_miller_xate.c\
bn_p8sparse.c\
bn_pairing_test.c\
bn_pairings.c\
bn_prints.c\
bn_skew_frobenius.c\
bn_twist.c\
bn_utils.c\
curve_settings.c\
fp4.c\
fp8.c\
../include/ELiPS_bn_bls/Commont_headers.h\
../include/ELiPS_bn_bls/bls12_G3_exp.h\
../include/ELiPS_bn_bls/bls12_finalexp.h\
../include/ELiPS_bn_bls/bls12_frobenius.h\
../include/ELiPS_bn_bls/bls12_generate_points.h\
../include/ELiPS_bn_bls/bls12_inits.h\
../include/ELiPS_bn_bls/bls12_line_ate.h\
../include/ELiPS_bn_bls/bls12_line_tate.h\
../include/ELiPS_bn_bls/bls12_miller_ate.h\
../include/ELiPS_bn_bls/bls12_miller_optate.h\
../include/ELiPS_bn_bls/bls12_miller_tate.h\
../include/ELiPS_bn_bls/bls12_p8sparse.h\
../include/ELiPS_bn_bls/bls12_pairings.h\
../include/ELiPS_bn_bls/bls12_scm.h\
../include/ELiPS_bn_bls/bls12_skew_frobenius.h\
../include/ELiPS_bn_bls/bls12_test_pairings.h\
../include/ELiPS_bn_bls/bls12_timeprint.h\
../include/ELiPS_bn_bls/bls12_twist.h\
../include/ELiPS_bn_bls/bn_bls12_precoms.h\
../include/ELiPS_bn_bls/bn_clears.h\
../include/ELiPS_bn_bls/bn_efp.h\
../include/ELiPS_bn_bls/bn_efp12.h\
../include/ELiPS_bn_bls/bn_efp2.h\
../include/ELiPS_bn_bls/bn_efp6.h\
../include/ELiPS_bn_bls/bn_final_exp.h\
../include/ELiPS_bn_bls/bn_fp.h\
../include/ELiPS_bn_bls/bn_fp12.h\
../include/ELiPS_bn_bls/bn_fp2.h\
../include/ELiPS_bn_bls/bn_fp6.h\
../include/ELiPS_bn_bls/bn_frobenius.h\
../include/ELiPS_bn_bls/bn_generate_points.h\
../include/ELiPS_bn_bls/bn_inits.h\
../include/ELiPS_bn_bls/bn_line_ate.h\
../include/ELiPS_bn_bls/bn_line_tate.h\
../include/ELiPS_bn_bls/bn_miller_ate.h\
../include/ELiPS_bn_bls/bn_miller_optate.h\
../include/ELiPS_bn_bls/bn_miller_tate.h\
../include/ELiPS_bn_bls/bn_miller_xate.h\
../include/ELiPS_bn_bls/bn_p8sparse.h\
../include/ELiPS_bn_bls/bn_pairing_test.h\
../include/ELiPS_bn_bls/bn_pairings.h\
../include/ELiPS_bn_bls/bn_prints.h\
../include/ELiPS_bn_bls/bn_skew_frobenius.h\
../include/ELiPS_bn_bls/bn_twist.h\
../include/ELiPS_bn_bls/bn_utils.h\
../include/ELiPS_bn_bls/curve_dtypes.h\
../include/ELiPS_bn_bls/curve_settings.h\
../include/ELiPS_bn_bls/field_dtype.h\
../include/ELiPS_bn_bls/fp4.h\
../include/ELiPS_bn_bls/fp8.h
